--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/connect.svg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@500;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Conectando Profissionais</title>
+    <title>Acesso Remoto</title>
+    <link rel="icon" type="image/svg+xml" href="remote-access.svg" />
   </head>
   <body>
     <div id="root"></div>
